# valiant

./: .gitignore  Cargo.toml
assets/levels/: world.ldtk
assets/sprites/: adventurer_1.aseprite  dungeon1.aseprite  enemies.aseprite
src/: game.rs  util.rs
src/game/: actor.rs  adventurer.rs  ascii.rs  camera.rs  collision.rs  config.rs  debug.rs  default_plugin_setup.rs  enemy.rs  ldtk.rs  position.rs  tile.rs
